--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Princess+Sofia|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" type="text/css" />
-    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/bf1cf91ad9/UntitledProject/style.css">
+    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/9bb1c7f4b6/UntitledProject/style.css">
 </head>
 
 <body>
     <header class="navbar fixed-top navbar-expand-md navbar-dark flex-column flex-md-row bg-info">
         <div class="container">
             <a class="navbar-brand" href="#">SLUT <span style="font-family: 'Open Sans Condensed'">Token</span></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto" style="font-family: 'Open Sans Condensed';">
                     <li class="nav-item active">
@@ -28,7 +25,9 @@
                         <a class="nav-link disabled" href="#">Disabled</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav ml-auto" style="font-size: 1.3em">
+                
+            </div>
+                <ul class="navbar-nav ml-auto flex-row">
                     <li class="nav-item">
                         <a class="nav-link icon-twitter"></a>
                     </li>
@@ -36,17 +35,13 @@
                         <a class="nav-link icon-github"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link icon-facebook"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link icon-bitcoin"></a>
+                        <a class="nav-link icon-reddit"></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link icon-slack"></a>
                         <!--<sub>coming soon</sub>-->
                     </li>
                 </ul>
-            </div>
         </div>
     </header>
     <div class="jumbotron" style="margin-top: 59px;">
