Updated OG Tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <title>Pump Coin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:title" content="Simple Lightweight Usable Token">
+    <meta property="og:url" content="http://www.sluttoken.com/">
+    <meta property="og:image" content="http://www.sluttoken.com/assets/images/sluttoken.background.png">
+    <meta property="og:image:width" content="500">
+    <meta property="og:image:height" content="500">
+    <meta property="og:description" content="Simple Lightweight Usable Token is an ERC20 Token that is built with the porn industry in mind.">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Princess+Sofia|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="https://i.icomoon.io/public/temp/9bb1c7f4b6/UntitledProject/style.css">
