--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:title" content="Simple Lightweight Usable Token">
     <meta property="og:url" content="http://www.sluttoken.com/">
-    <meta property="og:image" content="http://www.sluttoken.com/assets/images/sluttoken.background.png">
+    <meta property="og:image" content="http://www.sluttoken.com/assets/images/sluttoken_background.png">
     <meta property="og:image:width" content="500">
     <meta property="og:image:height" content="500">
     <meta property="og:description" content="Simple Lightweight Usable Token is an ERC20 Token that is built with the porn industry in mind.">
