--- a/index.html
+++ b/index.html
@@ -54,15 +54,11 @@
         <div id="particles-js" class="d-none d-lg-block" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; z-index: 2;"></div>
         <div class="content"></div>
             <div class="container text-center" style="margin-bottom: 2em; color: white;">
-                <h1 class="big-text">Simple Lightweight Usable Token</h1>
+                <h1 class="big-text">SLUT <span>Token</span></h1>
                 <div class="row">
                 <div class="col-md-8 offset-md-2">
                     <hr class="jumbotron-hr">
-                    <p class="lead">
-                        You're going to give some random person on the internet money, and they're going to take it and go buy
-                        stuff with it. Probably electronics, to be honest. Maybe even a big-screen television.
-                    </p>
-                    <p>Seriously, don't buy these tokens.</p>
+                        <p>Simple Lightweight Usable Token</p>
                     <hr class="jumbotron-hr">
                 </div>
             </div>
@@ -74,7 +70,7 @@
         <div class="container" style="margin-top: 5em; margin-bottom: 2em;">
             <div class="row">
                 <div class="col-lg-4">
-                    <p class="h1">First of its kind ICO</p>
+                    <p class="h1">Everyone loves SLUTs</p>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <p>
@@ -96,7 +92,7 @@
             <hr class="my-4">
             <div class="row">
                 <div class="col-lg-4">
-                    <p class="h1">Might be secure, definitely not audited</p>
+                    <p class="h1">Full functioning wallet</p>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <p>
@@ -116,7 +112,7 @@
             <hr class="my-4">
             <div class="row">
                 <div class="col-lg-4">
-                    <p class="h1">Guaranteed token value</p>
+                    <p class="h1">Fully integrated SLUT website</p>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <p>
