Commiting a bunch of things

--- a/index.html
+++ b/index.html
@@ -120,40 +120,20 @@
             </div>-->
         </div>
     </section>
-    <section style="background: #d0d0d0;">
+    <section>
         <div class="jumbotron">
-        <div class="container">
-            <h2 class="mt-4 mb-4">How to contribute</h2>
-            <div class="row">
-                <div class="col-lg-12 text-center">
+            <div class="content"></div>
+            <div class="container">
+                <h2 class="mt-4 mb-4">How to contribute</h2>
+                <div class="row">
+                <div class="col-lg-12 text-center" style="color: white;">
                     <p class="lead">The crowdsale begins on:</p>
                     <p class="h1">November 3rd<sup>th</sup>, 2017 <small><span class="text-muted">at</span></small> 2:00 P.M. UTC</p>
                     <hr />
                     <p>and will run until:</p>
                     <p class="h3">November 20th<sup>th</sup>, 2017 <small><span class="text-muted">at</span></small> 2:00 P.M. UTC</p>
                 </div>
-                <!--<div class="col-lg-6">
-                    <div class="card card-inverse card-primary bg-info">
-                        <div class="card-block">
-                            <h4 class="card-title">Token contract and generator</h4>
-                            <h6 class="card-subtitle mb-2">(this is how you're going to send me my spending money)</h6>
-                            <hr class="jumbotron-hr" />
-                            <p class="card-text text-white">
-                                To participate in the UET ICO, just send as much Ether as you want to the UET token/crowdsale
-                                contract. Make sure you provide enough gas for the transaction&mdash;100,000 or so ought to do it.
-                            </p>
-                            <p class="card-text text-white text-center" style="word-break: break-all;"><small><strong>
-                                0x27f706edde3aD952EF647Dd67E24e38CD0803DD6
-                            </strong></small></p>
-                            <div class="text-center">
-                                View on <a class="text-white" href="https://etherscan.io/address/0x27f706edde3aD952EF647Dd67E24e38CD0803DD6" target="_blank">Etherscan</a>
-                                or <a class="text-white" href="https://etherchain.org/account/0x27f706edde3aD952EF647Dd67E24e38CD0803DD6" target="_blank">etherchain</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>-->
             </div>
-        </div>
         </div>
     </section>
     <section>
