Some CSS Changes

--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-center">
-                        <icon class="big-icon icon-web"></icon>
-                    </div>
-                    <p>SLUTs are the best method to anonymous subscriptions to porn services. SLUT Token has announced a partnership with FapAndNap.com and will be integrating full SLUT fuctionality on their website.</p>
-                </div>
-                <div class="col-lg-4">
-                    <div class="text-center">
                         <icon class="big-icon icon-eye-hidden"></icon>
                     </div>
                     <p>
                         Let's be honest, nobody wants to enter their credit card information for porn to then get hacked. We've seen Ashley Madison destory the marriages of many or even worse, 
                         give their wife more power than she already had. SLUTs can be purchased descretly on the Ethereum network so you can enjoy your content without worrying about being caught online.
                     </p>
+                </div>
+                <div class="col-lg-4">
+                    <div class="text-center">
+                        <icon class="big-icon icon-web"></icon>
+                    </div>
+                    <p>SLUTs are the best method to anonymous subscriptions to porn services. SLUT Token has announced a partnership with FapAndNap.com and will be integrating full SLUT fuctionality on their website.</p>
                 </div>
                 <div class="col-lg-4">
                     <div class="text-center">
@@ -124,7 +124,7 @@
         <div class="jumbotron">
             <div class="content"></div>
             <div class="container">
-                <h2 class="mt-4 mb-4">How to contribute</h2>
+                <h2 class="mt-4 mb-4" style="color: white;">How to contribute</h2>
                 <div class="row">
                 <div class="col-lg-12 text-center" style="color: white;">
                     <p class="lead">The crowdsale begins on:</p>
@@ -164,25 +164,25 @@
                                 <td class="d-none d-sm-block">#1</td>
                                 <td class="text-right">1.000&nbsp;<small>ETH</small></td>
                                 <td class="text-right">1.000&nbsp;<small>ETH</small></td>
-                                <td class="text-right">101.000&nbsp;<small>UET</small></td>
+                                <td class="text-right">101.000&nbsp;<small>SLUT</small></td>
                             </tr>
                             <tr>
                                 <td class="d-none d-sm-block">#2</td>
                                 <td class="text-right">3.000&nbsp;<small>ETH</small></td>
                                 <td class="text-right">4.000&nbsp;<small>ETH</small></td>
-                                <td class="text-right">304.000&nbsp;<small>UET</small></td>
+                                <td class="text-right">304.000&nbsp;<small>SLUT</small></td>
                             </tr>
                             <tr>
                                 <td class="d-none d-sm-block">#3</td>
                                 <td class="text-right">0.005&nbsp;<small>ETH</small></td>
                                 <td class="text-right">4.005&nbsp;<small>ETH</small></td>
-                                <td class="text-right">0.500&nbsp;<small>UET</small></td>
+                                <td class="text-right">0.500&nbsp;<small>SLUT</small></td>
                             </tr>
                             <tr>
                                 <td class="d-none d-sm-block">#4</td>
                                 <td class="text-right">0.500&nbsp;<small>ETH</small></td>
                                 <td class="text-right">4.505&nbsp;<small>ETH</small></td>
-                                <td class="text-right">54.505&nbsp;<small>UET</small></td>
+                                <td class="text-right">54.505&nbsp;<small>SLUT</small></td>
                             </tr>
                         </tbody>
                     </table>
@@ -200,7 +200,7 @@
                     </p>
                     <p>
                         Every SLUT purchase of at least <strong>0.01 ETH</strong> worth during the bonus block will receive, in
-                        addition to the base distribution, an <strong>additional 100 UET</strong> per Ether multiplied
+                        addition to the base distribution, an <strong>additional 100 SLUTs</strong> per Ether multiplied
                         by the bonus multiplier. That means that contributors have a chance of receiving a total of
                         <em>nine times</em> the number of sluts they expected!
                     </p>
