A few more css changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Simple Lightweight Usable Token is an ERC20 Token that is built with the porn industry in mind.">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Princess+Sofia|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" type="text/css" />
-    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/311a080b8e/UntitledProject/style.css">
+    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/c29e268ca7/UntitledProject/style.css">
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107703749-1"></script>
     <script>
@@ -334,13 +334,8 @@
     </div>
   </section>
     <footer class="footer">
-        <div class="container">
-        <div class="row">
-            <div class="col-sm-6 offset-sm-3">Copyright SLUT Token 20017&copy;</div>
-            <div class="col-sm-3">
-                
-            </div>
-        </div>
+        <div class="container text-center">
+            <div class="col-sm-6 offset-sm-3">Copyright SLUT Token 2017&copy;</div>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
