--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         </div>
         <div class="col-md-8">
           <ul style="color: #434a54">
-            <li translate=""><span class="ng-scope">55% of raised tokens will be used for operations of the CoinPennant platform for the next 1,5 years. This includes development, administration, marketing, financial and legal consultancy, etc.</span></li>
+            <li translate=""><span class="ng-scope">55% of raised tokens will be used for operations of the FapAndNap platform for the next 1,5 years. This includes development, administration, marketing, financial and legal consultancy, etc.</span></li>
             <li translate=""><span class="ng-scope">11% will be used to develop a detailed business plan. This includes funding of strategic planning and project support.</span></li>
             <li translate=""><span class="ng-scope">10% will be distributed among founders and the initial development team for their efforts, resources, and technologies contributed to the development.</span></li>
             <li translate=""><span class="ng-scope">10% will be used for marketing, bounty program and PR.</span></li>
